--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,11 @@ python-dotenv>=1.0.0
 pyyaml>=6.0
 jinja2>=3.1.0
 tqdm>=4.65.0
-psycopg2-binary>=2.9.0
 sqlalchemy>=2.0.0
 alembic>=1.12.0
 click>=8.1.0
+google-cloud-aiplatform>=1.38.0
+vertexai>=1.38.0
+fastapi>=0.104.0
+uvicorn>=0.24.0
+websockets>=12.0
