--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,15 @@ vertexai>=1.38.0
 fastapi>=0.104.0
 uvicorn>=0.24.0
 websockets>=12.0
+python-multipart>=0.0.6
+sqlite3
+
+# LLM Connection Manager dependencies
+aiohttp==3.9.1
+requests==2.31.0
+google-cloud-aiplatform==1.38.1
+vertexai==1.38.1
+
+# Optional LLM providers
+openai==1.3.7
+anthropic==0.7.8
